--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,17 @@
 body {
   font-family: "Open Sans", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  /* background-color: #292F3F; */
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #B3B9C9;
+  border-radius: 5px;
+}
